--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,12 +2,7 @@ pipeline {
     agent {
         docker {
             image 'node:8-alpine'
-            args '-p 3000:3000'
         }
-    }
-    environment { 
-        CI = 'true'
-        FIREBASE_DEPLOY_TOKEN = credentials('firebase-deploy-token') 
     }
     stages {
         stage('Build') {
@@ -17,19 +12,7 @@ pipeline {
         }
         stage('Test') {
             steps {
-                sh './jenkins/scripts/test.sh'
+                sh 'npm run test'
             }
-        }
-        stage('Staging') { 
-            steps {
-                sh './jenkins/scripts/staging.sh' 
-                input message: 'Finished using the Staging version of the Web App? (Click "Proceed" to continue)' 
-            }
-        }
-        stage('Production') { 
-            steps {
-                sh './jenkins/scripts/production.sh' 
-            }
-        }
     }
 }
